<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello Android !</string>
    <string name="hello_world">Hello Android !</string>
    <string name="menu_op1">Preferencias</string>
    <string name="menu_op2">Utiles</string>
    <string name="menu_op3">Agenda</string>
    <string name="menu_op3_1">SubItem 1 Agenda</string>
    <string name="menu_op3_2">SubItem 2 Agenda</string>
    <string name="menu_cont_op1">Item Contextual 1</string>
    <string name="menu_cont_op2">Item Contextual 2</string>

    <string name="action_settings">Settings</string>
    <string name="save_menu">Guardar</string>
    <string name="new_menu">Nuevo</string>
    <string name="otras_opciones">Otras opciones</string>
    <string name="opcion_1">Opción 1</string>
    <string name="opcion_2">Opción 2</string>
    <string name="usuario">Usuario</string>
    <string name="menu_abierto">Menu Abierto</string>
    <string name="menu_cerrado">Menu Cerrado</string>
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="fragment3">Fragment 3</string>
    <string name="Part1">Option Menu press: Preferencias. Order: 1</string>
    <string name="Part2">Option Menu press: Utiles. Order: 2</string>
    <string name="Part3">Option Menu press: Agenda. Order: 3</string>
    <string name="Part4">Option Menu press: Subitem 1 Agenda. Order: 4</string>
    <string name="Part5">Option Menu press: Subitem 2 Agenda. Order: 5</string>
    <string name="Part6">Tag: Contextual Option 1 pressed</string>
    <string name="Part7">Tag: Contextual Option 2 pressed</string>
    <string name="orden">Orden:</string>>
    <string name="Part8">Option Menu press: Save. Order: 6</string>
    <string name="Part9">Option Menu press: New. Order: 7</string>

</resources>